# Tesseract.rs

./: .gitignore  Cargo.toml  EXTENDING.MD  NOTICE  README.md
docs/: CLIENT.MD
error-context/: Cargo.toml  README.MD
error-context/src/: lib.rs  simple.rs
errorcon/: Cargo.toml
errorcon/src/: convertible.rs  lib.rs
playground/: Cargo.toml
playground/src/: main.rs
playground/src/plt/: client.rs  mod.rs
protocols/: README.MD
protocols/substrate/: Cargo.toml  README.md  SPECIFICATION.md
protocols/substrate/src/: client.rs  lib.rs  service.rs
protocols/substrate/tests/: dapp.rs  subxt_dapp_test.rs  subxt_local_test.rs
protocols/substrate/tests/dapp/: call.rs  dapp.rs  mod.rs  signer.rs
protocols/substrate/tests/plt/: client.rs  service.rs
protocols/substrate/tests/wallet/: mod.rs  print.rs  service.rs
protocols/test/: Cargo.toml  README.MD
protocols/test/src/: client.rs  lib.rs  service.rs
tesseract/: Cargo.toml
tesseract-client/: Cargo.toml  README.MD
tesseract-client/src/: connection.rs  delegate.rs  lib.rs  tesseract.rs
tesseract-playground/: Cargo.toml
tesseract-playground/src/: main.rs
tesseract-playground/src/plt/: client.rs  link.rs  service.rs
tesseract-playground/src/polkadot/: client.rs  mod.rs  service.rs
tesseract-service/: Cargo.toml  README.MD
tesseract-service/src/: executor.rs  lib.rs  processor.rs  service.rs  tesseract.rs  transport.rs
tesseract/src/: envelope.rs  error.rs  lib.rs  protocol.rs  response.rs  serialize.rs
tesseract/src/client/: connection.rs  delegate.rs  service.rs  tesseract.rs  transport.rs
tesseract/src/service/: executor.rs  mod.rs  processor.rs  service.rs  tesseract.rs  transport.rs
tesseract/src/transports/: mod.rs
tesseract/src/transports/plt/: client.rs  link.rs  mod.rs  service.rs
