# Licensed under the Apache License, Version 2.0.

[package]
name = "errorcon"
version = "0.1.0"
description = "A small crate for scoping errors and easier error conversion"
categories = ["data-structures", "no-std", "rust-patterns"]
keywords = ["error", "conversion", "from", "into", "context"]

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

[features]
default = []
nostd = []