# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-playground"
description = "Tesseract demonstration. Shows how to use Tesseract and how to create custom protocols and transports."

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
futures = { workspace = true, features = ["thread-pool"] }

tesseract-one = { workspace = true, features=["client", "service", "transport-plt"]}
tesseract-protocol-test = { path = "../protocols/test", features=["client", "service"]}