# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-playground"
version = "0.1.0"
authors = ["Tesseract Systems, Inc. <contact@tesseract.one>"]
description = "Tesseract demonstration. Shows how to use Tesseract and how to create custom protocols and transports."
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", features = ["thread-pool"] }
serde = { version = "1.0", features = ["derive"] }

tesseract = { path = "../tesseract" }
tesseract-client = { path = "../tesseract-client" }
tesseract-service = { path = "../tesseract-service" }