# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract"
description = "Base code for both, Tesseract client and service."

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["dep:async-trait"]
service = ["dep:async-trait"]
transports = []
transport-plt = ["transports", "client", "service", "dep:async-trait"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

futures = { workspace = true }

async-trait = { workspace = true, optional = true }