# Licensed under the Apache License, Version 2.0.
[package]
name = "tesseract-protocol-substrate"
version = "0.1.0"
authors = ["Tesseract Systems, Inc. <contact@tesseract.one>"]
description = "Tesseract protocol for Substrate based networks"
edition = "2021"
license = "Apache-2.0"

[features]
client = ["tesseract/client"]
service = ["tesseract/service"]
# default = ["client", "service"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = { version = "0.1"}
tesseract = { path = "../../tesseract" }

[dev-dependencies]
subxt = "0.25.0"
scale-info = "2.3.0"
sp-weights = "4.0.0"
parity-scale-codec = "3.2.1"
tesseract = { path = "../../tesseract", features = ["transport-plt"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
futures = "0.3"
rand = "0.8.5"

[[test]]
name = "subxt_dapp_test"
path = "tests/subxt_dapp_test.rs"
required-features = ["client", "service"]