# Licensed under the Apache License, Version 2.0.
[package]
name = "tesseract-protocol-substrate"
description = "Tesseract protocol for Substrate based networks"

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

[features]
client = ["tesseract/client"]
service = ["tesseract/service"]
# default = ["client", "service"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
tesseract = { path = "../../tesseract" }

[dev-dependencies]
subxt = "0.25.0"
scale-info = "2.3.0"
sp-weights = "5.0.0"
parity-scale-codec = "3.2.1"
pallet-contracts-primitives = "8.0.0"
tesseract = { path = "../../tesseract", features = ["transport-plt"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
futures = "0.3"
rand = "0.8.5"

[[test]]
name = "subxt_dapp_test"
path = "tests/subxt_dapp_test.rs"
required-features = ["client", "service"]