# Licensed under the Apache License, Version 2.0.
[package]
name = "tesseract-protocol-substrate"
description = "Tesseract protocol for Substrate based networks"
readme = "README.md"
keywords = ["blockchain", "dApp", "wallet", "mobile", "bridge", "protocol", "substrate", "polkadot"]

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
categories.workspace = true

[features]
client = ["tesseract-one/client"]
service = ["tesseract-one/service"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
tesseract-one.workspace = true

[dev-dependencies]
subxt = "0.25.0"
scale-info = "2.3.0"
sp-weights = "5.0.0"
parity-scale-codec = "3.2.1"
pallet-contracts-primitives = "8.0.0"
tesseract-one = { workspace = true, features = ["transport-plt"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
futures = "0.3"
rand = "0.8.5"

[[test]]
name = "subxt_dapp_test"
path = "tests/subxt_dapp_test.rs"
required-features = ["client", "service"]