# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-protocol-test"
version = "0.1.0"
authors = ["Tesseract Systems, Inc. <contact@tesseract.one>"]
description = "Tesseract protocol for testing tessract, transports, etc. Useful when you don't want to handle real transactions yet."
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["tesseract/client"]
service = ["tesseract/service"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
tesseract = { path = "../../tesseract" }
