# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-protocol-test"
description = "Tesseract protocol for testing tessract, transports, etc. Useful when you don't want to handle real transactions yet."

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["tesseract-one/client"]
service = ["tesseract-one/service"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
tesseract-one.workspace = true
