# Licensed under the Apache License, Version 2.0.

[package]
name = "tesseract-protocol-test"
description = "Tesseract protocol for testing tessract, transports, etc. Useful when you don't want to handle real transactions yet."
readme = "README.MD"
keywords = ["blockchain", "dApp", "wallet", "mobile", "bridge", "protocol", "test"]

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["tesseract-one/client"]
service = ["tesseract-one/service"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
tesseract-one.workspace = true
